# PalmaVillApp

./: README.md  pyproject.toml  requirements.txt
data/: IFA_template.docx  booking.xls  felho.xlsx  header_template.xlsx  table_template.xlsx
notebooks/: PalmaVillApp_sandbox.ipynb  test.py
palmavillapp/components/: constants.py
palmavillapp/components/data_pipelines/: comparing_utils.py  guest_nights_calculations.py
palmavillapp/components/file_formatting/: excel_copy.py  excel_gen.py
palmavillapp/components/table_formatting/: utils.py
palmavillapp/streamlit_app/: hello.py
palmavillapp/streamlit_app/pages/: 1_Find_missing_accounts.py  2_Create_documents.py
