[tool.poetry]
name = "palmavillapp"
version = "0.1.0"
description = "An app that helps my family's tax administration"
authors = ["Istvan Peter Jaray <istvanpeterjaray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
fuzzywuzzy = "^0.18.0"
streamlit = "^1.37.0"
python-docx = "^1.1.2"
docx = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
